--- a/css/style.css
+++ b/css/style.css
@@ -801,6 +801,27 @@ ul.extended li{
     box-sizing: border-box;
 }
 
+.modal.video{
+	align-items: center;
+}
+
+.modal.video .item{
+	width: 640px;
+	padding: 30px 0 56.25%;
+	position: relative;
+    /* padding-bottom: 56.25%;
+    padding-top: 30px; */
+    height: 0;
+    overflow: hidden;
+}
+
+.modal.video iframe{
+	position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .modal .decor{
 	margin-top: -27px;
